--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,8 @@
 db.driver		= com.mysql.jdbc.Driver
 db.url			= jdbc:mysql://localhost:3306/usersdb
 db.username		= root
-db.password		= admin
+db.password		= krishna
+
+hibernate.dialect				= org.hibernate.dialect.MySQLDialect
+hibernate.show_sql				= true  
+entitymanager.packages.to.scan	= com.chandak.springmvc
