trying to add naming strategy.

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,8 +1,10 @@
 db.driver		= com.mysql.jdbc.Driver
-db.url			= jdbc:mysql://localhost:3306/usersdb
+db.url			= jdbc:mysql://localhost:3306/userdb
 db.username		= root
 db.password		= krishna
 
 hibernate.dialect				= org.hibernate.dialect.MySQLDialect
 hibernate.show_sql				= true  
 entitymanager.packages.to.scan	= com.chandak.springmvc
+hibernate.hbm2ddl.auto			= create
+hibernate.ejb.naming_strategy	= com.chandak.springmvc.common.utils.CustomNamingStrategy
