--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
-		<java-version>1.6</java-version>
+		<java-version>1.8</java-version>
 		<org.springframework-version>4.2.0.RELEASE</org.springframework-version>
 		<org.springframework-jdbc-version>2.0.6</org.springframework-jdbc-version>
 		<org.springframework.data-spring-jpa>1.9.2.RELEASE</org.springframework.data-spring-jpa>
@@ -97,6 +97,15 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
